http01/k3s-ingressclass.yml

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: kuber-system/traefik
