http01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: digiocean
    kubernetes.io/ingress.class: nginx
  name: digiocean-ingress
  namespace: default
spec:
  rules:
  - host: my-nginx1.devtech.tk
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-nginx
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - my-nginx1.devtech.tk
    secretName: digiocean
